added html/css for annotation

--- a/WebAPI/wwwroot/js/components/QA/QA.css
+++ b/WebAPI/wwwroot/js/components/QA/QA.css
@@ -2,3 +2,8 @@
 #fav {
     font-size: 30px;
 }
+.form-control-static {
+    border-radius: 10px;
+    //border: solid;
+    background-color: #efefef;
+}
