annotation implemented and code clearn up.

--- a/WebAPI/wwwroot/js/components/QA/QA.css
+++ b/WebAPI/wwwroot/js/components/QA/QA.css
@@ -4,6 +4,7 @@
 }
 .form-control-static {
     border-radius: 10px;
-    //border: solid;
-    background-color: #efefef;
+    border: solid;
+    background-color: #efefef;
+
 }
