--- a/WebAPI/wwwroot/js/components/searchresult/searchresult.html
+++ b/WebAPI/wwwroot/js/components/searchresult/searchresult.html
@@ -1,15 +1,15 @@
+<link rel="stylesheet" type="text/css" href="./js/components/searchresult/searchresult.css">
 <!--searchresult-->
 <ul class="list-group" data-bind="foreach: result">
         <li class="list-group-item" data-bind="click: $parent.choosePost">
             <div data-bind="html:title"></div>
+            <span class="createdDate" data-bind="html:createDate"></span>
         </li>
 </ul>
 
+
+
 <!-- paging -->
-<ul class="pagination">
-    <li><a href="#">1</a></li>
-    <li class="active"><a href="#">2</a></li>
-    <li><a href="#">3</a></li>
-    <li><a href="#">4</a></li>
-    <li><a href="#">5</a></li>
-  </ul>
+
+<button type="button" class="btn-default active" data-bind="visible: prev, click: prevPage"><<</button>
+<button type="button" class="btn-default" data-bind="visible: next , click: nextPage">>></button>
