--- a/WebAPI/wwwroot/js/components/statistics/statistics.html
+++ b/WebAPI/wwwroot/js/components/statistics/statistics.html
@@ -1,10 +1,3 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<span>statistics</span>
+<h4 data-bind="text: title"></h4>
+<div id="chart_div"></div>
