--- a/WebAPI/wwwroot/js/components/SearchHistory/SearchHistory.html
+++ b/WebAPI/wwwroot/js/components/SearchHistory/SearchHistory.html
@@ -1,22 +1,31 @@
 ﻿
+
+
+
 <link rel="stylesheet" type="text/css" href="./js/components/SearchHistory/SearchHistory.css">
-<h4 data-bind="text: title"></h4>
-<ul class="list-group" data-bind="foreach: searchHistory">
-    
-    <li class="list-group-item">
-        <div data-bind="html: body"></div>         
-    
-        <!-- results -->
-        <div class="row">
-            <ul class="list-group" data-bind="foreach: search">
-                <li class="list-group-item">
-                    <span data-bind="text: search_string"></span>
-                    - <span data-bind="text: search_date"></span>                  
-                </li>
-            </ul>
-        </div>
 
+
+<!-- paging -->
+
+<span data-bind="if: prev">
+    <button type="button" class="btn-default" data-bind="click: prevPage"><<</button>
+</span>
+<span data-bind="ifnot: prev">
+    <button type="button" class="btn-default" disabled><<</button>
+</span>
+<span data-bind="if: next">
+    <button type="button" class="btn-default" data-bind="click: nextPage">>></button>
+</span>
+<span data-bind="ifnot: next">
+    <button type="button" class="btn-default" disabled>>></button>
+</span>
+
+<!--search history-->
+
+<ul class="list-group" data-bind="foreach: result">
+    <li class="list-group-item" data-bind="click: $parent.chooseSearch">
+        <div data-bind="html:searchString"></div>
+        <span class="createdDate" data-bind="html:searchDate"></span>
     </li>
-
 </ul>
 
