both graphs are implemented

--- a/WebAPI/wwwroot/js/components/statistics/statistics.html
+++ b/WebAPI/wwwroot/js/components/statistics/statistics.html
@@ -1,3 +1,4 @@
 ﻿<span>statistics</span>
 <h4 data-bind="text: title"></h4>
-<div id="chart_div"></div>
+<div id="postGraph"></div>
+<div id="tagGraph"></div>
