--- a/WebAPI/wwwroot/js/components/wordcloud/wordcloud.html
+++ b/WebAPI/wwwroot/js/components/wordcloud/wordcloud.html
@@ -2,8 +2,8 @@
 
 <h4 data-bind="text: title"></h4>
 
-    
+    HEJ!!!
 <div data-bind="cloud: {words}" style="width: 200px; height: 200px"></div>
 
-
+hej!
 
