added word cloud to search result

--- a/WebAPI/wwwroot/js/components/searchresult/searchresult.html
+++ b/WebAPI/wwwroot/js/components/searchresult/searchresult.html
@@ -23,5 +23,9 @@
         </li>
 </ul>
 
+<div data-bind="if: subComponent() != false">
+        <div data-bind="component: { name: subComponent, params: {words: words} }"></div>
+</div>
+
 
 
