--- a/WebAPI/wwwroot/js/components/wordcloud/wordcloud.html
+++ b/WebAPI/wwwroot/js/components/wordcloud/wordcloud.html
@@ -1,9 +1,7 @@
 ﻿
 
-<h4 data-bind="text: title"></h4>
+<h5>Frequency of words used in search</h5>
 
-    HEJ!!!
 <div data-bind="cloud: {words}" style="width: 200px; height: 200px"></div>
 
-hej!
 
