fixed term network bug

--- a/WebAPI/wwwroot/js/components/termnetwork/termnetwork.html
+++ b/WebAPI/wwwroot/js/components/termnetwork/termnetwork.html
@@ -1,1 +1,5 @@
-﻿TERM NETWORK!!!:OO
+﻿
+<div class="form-group">
+    <input  id="id_search" type="text" class="form-control" placeholder="input word" data-bind="value: inputField">
+</div>
+<button class="btn btn-default" data-bind="click: clickCreate">Search</button>
