--- a/WebAPI/wwwroot/css/site.css
+++ b/WebAPI/wwwroot/css/site.css
@@ -41,4 +41,13 @@ input[type="checkbox"].input-validation-error {
     display: none;
 }
 
+.link {
+    stroke: #ccc;
+}
+
+.node text {
+    pointer-events: none;
+    font: 14px sans-serif;
+}
+
 
